# graphics

./: .gitignore  CMakeLists.txt  README.md  const.cpp  const.hpp  font.cpp  font.hpp  fullscreen_noise.cpp  fullscreen_noise.hpp  gol2d.cpp  gol2d.hpp  graphics_test.cpp  graphics_test.h  hash.cpp  hash.hpp  main.cpp  menu.cpp  menu.hpp  renderer.cpp  renderer.hpp
docs/: README.md
